# illini-intel

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.server  README.md  docker-compose.yml
.agents/skills/pr-review/: SKILL.md
.agents/skills/tasks-write/: SKILL.md
.superpowers/brainstorm/15950-1774907403/content/: dashboard-combined.html  dashboard-layout.html
.superpowers/brainstorm/15950-1774907403/state/: events  server-stopped
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/clients/: __init__.py  bedrock.py  espn.py
backend/app/core/: __init__.py  config.py  leagues.py
backend/app/models/: __init__.py  events.py  matchup.py
backend/app/services/: __init__.py  narrator.py  pipeline.py
backend/illini_intel_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_config.py  test_espn.py  test_events.py  test_leagues.py  test_matchup.py  test_narrator_json.py  test_narrator_prediction.py  test_narrator_stats.py  test_pipeline.py
docs/: BUILD.md  SPEC.md  TASKS.md
docs/superpowers/plans/: 2026-06-14-open-domain-matchup-intelligence.md
docs/superpowers/specs/: 2026-03-30-bi-dashboard-design.md  2026-06-14-open-domain-matchup-intelligence-design.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/features/analysis/: state.ts  types.ts
frontend/app/features/analysis/__tests__/: predictionText.test.ts  richText.test.ts  statComparison.test.ts  state.test.ts  (+1 more)
(+19 files in other folders)
